--- a/PetSitter/app/src/main/res/values/strings.xml
+++ b/PetSitter/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="nome">nome</string>
     <string name="adicionaranimal">Adicionar animal</string>
     <string name="cuidar">Cuidar</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_principal">principalActivity</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
