--- a/PetSitter/app/src/main/res/values/strings.xml
+++ b/PetSitter/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_principal">principalActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_home">HomeActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
